event spacing fix

--- a/themes/isa/scss/layout/_site.scss
+++ b/themes/isa/scss/layout/_site.scss
@@ -754,11 +754,6 @@ aside .mod {
 	padding-left: .41em;
 	margin-top: .5em;
 }
-/* Modifying the Images*/
-#grbb{
-	background-position: 0 -40px;
-}
-
 #grbb.ListE {
 	@media screen and (min-width: 473px){
 		margin: 2em; 
